--- a/ClientApp/src/components/userToolBar/UserToolBar.module.scss
+++ b/ClientApp/src/components/userToolBar/UserToolBar.module.scss
@@ -6,7 +6,11 @@
   height: 3rem;
   gap: 0.5rem;
 
-  .userName {
-    color: #e6f4ff;
+  color: #e6f4ff;
+
+  .triggerButtonContainer {
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
