--- a/ClientApp/src/components/userToolBar/UserToolBar.module.scss
+++ b/ClientApp/src/components/userToolBar/UserToolBar.module.scss
@@ -5,12 +5,10 @@
   align-items: center;
   height: 3rem;
   gap: 0.5rem;
-
   color: #e6f4ff;
 
-  .triggerButtonContainer {
-    &:hover {
-      cursor: pointer;
-    }
+  .notificationOverlay {
+    max-height: 3rem;
+    width: 400px;
   }
 }
