--- a/ClientApp/src/components/sideMenu/SideMenu.module.scss
+++ b/ClientApp/src/components/sideMenu/SideMenu.module.scss
@@ -1,4 +1,4 @@
-aside.siderContainer {
+.siderContainer {
   height: 100vh;
 
   .systemLogo {
@@ -11,9 +11,5 @@ aside.siderContainer {
     .title {
       margin: 0
     }
-  }
-
-  .menuDivider {
-    margin: 0;
   }
 }
