- Update file structure for components of layout; - Update min-height for appContent component and footer; - Update formatting of project ni general; - Replace menu component in side menu by tree component; - Remove reduntant models; - Rename model for side menu item;

--- a/ClientApp/src/components/layout/content/AppContent.module.scss
+++ b/ClientApp/src/components/layout/content/AppContent.module.scss
@@ -1,6 +1,6 @@
-.contentContainer {
+.pageContainer {
   padding: 24px;
-  min-height: 360px;
+  min-height: calc(93vh - 3rem);
 }
 
 .breadCrumps {
