--- a/ClientApp/src/components/layout/footer/Footer.module.scss
+++ b/ClientApp/src/components/layout/footer/Footer.module.scss
@@ -1,4 +1,6 @@
 .footer {
-  text-align: center;
-  height: 5vh;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
