--- a/ClientApp/src/components/layout/sideMenu/SideMenu.module.scss
+++ b/ClientApp/src/components/layout/sideMenu/SideMenu.module.scss
@@ -3,7 +3,6 @@
 
   .systemLogo {
     height: 3rem;
-    background: rgb(255 255 255 / 20%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,4 +11,14 @@
       margin: 0
     }
   }
+
+  .siderDivider {
+    margin-top: 0;
+  }
+}
+
+.sideMenuTree {
+  white-space: nowrap;
+  align-items: flex-start;
+  overflow: hidden;
 }
