- Add lodash package; - Reorder top level components; - Create subheader that displays breadcrumbs, item name and saving status with last time updated; - Configure related date package.

--- a/ClientApp/src/components/layout/content/AppContent.module.scss
+++ b/ClientApp/src/components/layout/content/AppContent.module.scss
@@ -1,8 +1,3 @@
 .pageContainer {
-  padding: 24px;
-  min-height: calc(100vh - 150px);
-}
-
-.breadCrumps {
-  margin: 16px 0;
+  min-height: calc(100vh - 6rem);
 }
