- Add route for notes overview; - Implement create note form side menu flow; - Implement note's title and editor's content update; - Remove SubHeader component from places, where it's not necessary to be right now from; - Add note's model; - Configure cors.

--- a/ClientApp/src/pages/notes/notes.module.scss
+++ b/ClientApp/src/pages/notes/notes.module.scss
@@ -1,5 +1,14 @@
 @use "src/styles.module" as *;
 
-.content {
-  @include page-content;
+.pageContent {
+  @include page-content-base;
+
+  .noteTitleContainer {
+    min-height: 7rem;
+  }
+
+  .noteTitle {
+    max-width: 650px;
+    margin: 0 auto 2rem;
+  }
 }
