--- a/ClientApp/src/pages/notes/notes.module.scss
+++ b/ClientApp/src/pages/notes/notes.module.scss
@@ -4,11 +4,11 @@
   @include page-content-base;
 
   .noteTitleContainer {
-    min-height: 7rem;
+    min-height: 3rem;
   }
 
   .noteTitle {
     max-width: 650px;
-    margin: 0 auto 2rem;
+    margin: 0 auto;
   }
 }
