- Make bg color of side menu darker than main page content; - Add possibility to manage global error handling from webpack config.

--- a/ClientApp/src/pages/notes/notes.module.scss
+++ b/ClientApp/src/pages/notes/notes.module.scss
@@ -3,12 +3,15 @@
 .pageContent {
   @include page-content-base;
 
+  min-height: calc(100vh - 9rem);
+
   .noteTitleContainer {
-    min-height: 3rem;
+    @include page-title-container
   }
 
   .noteTitle {
+    @include entity-title;
+
     max-width: 650px;
-    margin: 0 auto;
   }
 }
