- Add packages for charts and react countup formatter; - Add scrollbar gutter to html css; - Implement budget page displaying with budgetItems table.

--- a/ClientApp/src/pages/budget/budjet.module.scss
+++ b/ClientApp/src/pages/budget/budjet.module.scss
@@ -2,4 +2,20 @@
 
 .pageContent {
   @include page-content-base;
+
+  .budgetInfoCard {
+    height: 100%;
+  }
+
+  .budgetTitle {
+    margin: 0;
+  }
+
+  .budgetRow {
+    margin-bottom: 0.5rem;
+  }
+
+  .budgetDescriptionFormField{
+    margin-bottom: 0;
+  }
 }
