- Update panel resize handler's color; - Update side menu tree background color.

--- a/ClientApp/src/components/app/App.module.scss
+++ b/ClientApp/src/components/app/App.module.scss
@@ -14,4 +14,8 @@ body {
   z-index: 1000;
   box-sizing: border-box;
   background-clip: padding-box;
+
+  &:hover {
+    background-color: deepskyblue;
+  }
 }
