--- a/ClientApp/src/components/app/App.module.scss
+++ b/ClientApp/src/components/app/App.module.scss
@@ -4,11 +4,10 @@ body {
 }
 
 .resizeHandle {
-  width: 11px;
+  width: 7px;
   margin: 0 -5px;
-  border-left: 5px solid rgb(255 255 255 / 0%);
-  border-right: 5px solid rgb(255 255 255 / 0%);
-  cursor: col-resize;
+  border-left: 3px solid rgb(255 255 255 / 0%);
+  border-right: 3px solid rgb(255 255 255 / 0%);
   background: #000;
   opacity: 0.2;
   z-index: 1000;
@@ -16,6 +15,10 @@ body {
   background-clip: padding-box;
 
   &:hover {
-    background-color: deepskyblue;
+    background-color: #1677ff;
+  }
+
+  &:active {
+    border-color: #1677ff;
   }
 }
