--- a/ClientApp/src/components/app/App.module.scss
+++ b/ClientApp/src/components/app/App.module.scss
@@ -5,10 +5,9 @@ body {
 
 .resizeHandle {
   width: 7px;
-  margin: 0 -5px;
-  border-left: 3px solid rgb(255 255 255 / 0%);
-  border-right: 3px solid rgb(255 255 255 / 0%);
-  background: #000;
+  margin: -5px 0 0 -5px;
+  border-left: 2px solid rgb(255 255 255 / 0%);
+  border-right: 2px solid rgb(255 255 255 / 0%);
   opacity: 0.2;
   z-index: 1000;
   box-sizing: border-box;
