- Add right padding to side menu item.

--- a/ClientApp/src/components/layout/sideMenu/SideMenu.module.scss
+++ b/ClientApp/src/components/layout/sideMenu/SideMenu.module.scss
@@ -20,8 +20,7 @@
 
 .sideMenuTree {
   white-space: nowrap;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 24px 3px 24px 0;
   overflow: hidden;
   max-height: calc(100% - 3rem);
   margin-right: -5px;
