- Add link from login page to registration page; - Implement Profile service to map Identity Claims to token; - Fix namespaces in Identity Service; - Update Identity Server seeding config.

--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Home/Error/Index.cshtml
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Home/Error/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model IdentityService.Presentation.Pages.Error.Index
+@model IdentityService.Presentation.Pages.Home.Error.Index
 
 <div class="error-page">
     <div class="lead">
