--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Account/Login/Index.cshtml
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Account/Login/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model IdentityService.Presentation.Pages.Login.Index
+@model IdentityService.Presentation.Pages.Account.Login.Index
 
 <div class="login-page">
     <div class="lead">
@@ -46,6 +46,7 @@
 
                             <button class="btn btn-primary" name="Input.Button" value="login">Login</button>
                             <button class="btn btn-secondary" name="Input.Button" value="cancel">Cancel</button>
+                            <button class="btn btn-primary" name="Input.Button" value="register">Register</button>
                         </form>
                     </div>
                 </div>
