--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Account/Logout/Index.cshtml
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Account/Logout/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model IdentityService.Presentation.Pages.Logout.Index
+@model IdentityService.Presentation.Pages.Account.Logout.Index
 
 <div class="logout-page">
     <div class="lead">
