--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Account/Logout/LoggedOut.cshtml
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Account/Logout/LoggedOut.cshtml
@@ -1,5 +1,5 @@
 @page
-@model IdentityService.Presentation.Pages.Logout.LoggedOut
+@model IdentityService.Presentation.Pages.Account.Logout.LoggedOut
 
 <div class="logged-out-page">
     <h1>
