--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Index.cshtml
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model IdentityService.Presentation.Pages.Home.Index
+@model IdentityService.Presentation.Pages.Index
 
 <div class="welcome-page">
     <h1>
