--- a/ClientApp/src/components/layout/sideMenu/SideMenu.module.scss
+++ b/ClientApp/src/components/layout/sideMenu/SideMenu.module.scss
@@ -2,15 +2,19 @@
   height: 100vh;
   padding:  0 5px;
 
-  .systemLogo {
+  .title {
     height: 3rem;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-flow: row wrap;
+    overflow: hidden;
+  }
 
-    .title {
-      margin: 0
-    }
+  .brandIcon {
+    height: 3rem;
+    color: #1677ff;
   }
 
   .siderDivider {
