--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Shared/_Layout.cshtml
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Shared/_Layout.cshtml
@@ -4,26 +4,18 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
-
-    <title>Duende IdentityServer</title>
-
-    <link rel="icon" type="image/x-icon" href="~/favicon.ico"/>
-    <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico"/>
-
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="~/lib/bootstrap4-glyphicons/css/bootstrap-glyphicons.min.css"/>
-    <link rel="stylesheet" href="~/css/site.css"/>
+    <title>Global Hub Authentication</title>
+    <link rel="icon" type="image/x-icon" href="~/img/favicon.svg"/>
+    <link rel="shortcut icon" type="image/x-icon" href="~/img/favicon.svg"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<partial name="_Nav"/>
 
-<div class="container body-container">
+<div class="container">
     @RenderBody()
 </div>
 
-<script src="~/lib/jquery/dist/jquery.slim.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 @RenderSection("scripts", required: false)
 </body>
 </html>
