- Create base Page Model for auth pages; - Update pages to use base page model.

--- a/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Account/Login/Index.cshtml
+++ b/GlobalHub/Services/IdentityService/IdentityService.Presentation/Pages/Account/Login/Index.cshtml
@@ -8,15 +8,15 @@
 
     var externalAuthModel = new ExternalAuthViewModel
     {
-        ExternalProviders = Model.View.ExternalProviders,
-        ReturnUrl = Model.Input.ReturnUrl,
+        ExternalProviders = Model.ExternalProviders,
+        ReturnUrl = Model.ReturnUrl,
     };
 }
 
 <form asp-page="/Account/Login/Index">
     <partial name="Shared/Components/_SystemLogo"/>
     <partial name="Shared/Components/_ValidationSummary"/>
-    <input type="hidden" asp-for="Input.ReturnUrl"/>
+    <input type="hidden" asp-for="ReturnUrl"/>
 
     <div class="mb-3">
         <label asp-for="Input.Username" class="form-label"></label>
