- Minor styles refactoring.

--- a/ClientApp/src/components/layout/sideMenu/SideMenu.module.scss
+++ b/ClientApp/src/components/layout/sideMenu/SideMenu.module.scss
@@ -58,9 +58,9 @@
     }
 
     .sideMenuActionButton {
-      min-width: 1.5rem;
-      margin-left: 5px;
       display: none;
+      min-width: 1.5rem;
+      margin-left: 0.5rem;
     }
   }
 
