- Update style of note title input; - Add debounce to note title editing.

--- a/ClientApp/src/pages/notes/notes.module.scss
+++ b/ClientApp/src/pages/notes/notes.module.scss
@@ -2,18 +2,18 @@
 
 .pageContent {
   @include page-content-base;
-
   min-height: calc(100vh - 9rem);
 
   .noteTitleContainer {
-    @include page-title-container
+    text-align: center;
+    @include page-title-container;
   }
 
   .noteTitle {
-    @include entity-title;
-
-    font-weight: bold;
+    font-size: 2rem;
+    font-weight: bolder;
     width: 75%;
+    padding: 0;
   }
 }
 
