--- a/ClientApp/src/components/itemInfoHeader/itemInfoHeader.module.scss
+++ b/ClientApp/src/components/itemInfoHeader/itemInfoHeader.module.scss
@@ -6,6 +6,8 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 1px 2px 5px rgb(0 0 0 / 20%);
+  position: relative;
+  z-index: 1000;
 
   .itemTitle {
     width: 40%;
