--- a/ClientApp/src/pages/tasks/projects.module.scss
+++ b/ClientApp/src/pages/tasks/projects.module.scss
@@ -1,7 +1,7 @@
 @use "src/styles.module" as *;
 
 .pageContent {
-  padding: 1.5rem;
+  padding: 0.5rem 1.5rem;
   min-height: calc(100vh - 9rem);
 
   .projectTitle {
