--- a/ClientApp/src/pages/tasks/projectItemsViews/tableView.module.scss
+++ b/ClientApp/src/pages/tasks/projectItemsViews/tableView.module.scss
@@ -13,14 +13,14 @@
     white-space: nowrap;
   }
 
-  &:hover .openButton {
-    display: block;
-    opacity: 100%;
-    transition: opacity ease-out;
-  }
-
   .openButton {
     display: none;
     opacity: 0;
+  }
+
+  &:hover .openButton {
+    display: block;
+    opacity: 1;
+    transition: opacity ease-out;
   }
 }
