Implement delete operation for project items: - Add project item delition; - Add minor updates on project items.

--- a/ClientApp/src/pages/tasks/projectItemsViews/tableView.module.scss
+++ b/ClientApp/src/pages/tasks/projectItemsViews/tableView.module.scss
@@ -13,13 +13,13 @@
     white-space: nowrap;
   }
 
-  .openButton {
+  .controlButtons {
     display: none;
     opacity: 0;
   }
 
-  &:hover .openButton {
-    display: block;
+  &:hover .controlButtons {
+    display: flex;
     opacity: 1;
     transition: opacity ease-out;
   }
